5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1594_1800.log
== TEST (2019-05-20 14:48:52) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
print(a**a)+(b**b)+(c**c)/(a + b+ c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a**a)+(b**b)+(c**c)/(a + b+ c)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 14:49:15) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
print((a**a)+(b**b)+(c**c))/((a + b+ c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((a**a)+(b**b)+(c**c))/((a + b+ c))
TypeError: unsupported operand type(s) for /: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:04:02) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))

print(round((a**a)+(b**b)+(c**c))/(a + b + c),7)
-- EXECUTION TIME:
0.727845
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.7452150957795578e+42 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661968e+247 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:04:32) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))

print(round((a**a)+(b**b)+(c**c)/(a + b + c),7)
-- EXECUTION TIME:
0.798915
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 6
    
                                                   ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:04:37) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))

print(round((a**a)+(b**b)+(c**c)/(a + b + c),7)
-- ERROR:
File "XXXX", line 6
    
                                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:04:59) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))

print(round((a**a)+(b**b)+(c**c)/(a + b + c),7)
-- ERROR:
File "XXXX", line 6
    
                                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:05:08) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))

print(round((a**a)+(b**b)+(c**c)/(a + b + c),7))
-- OUTPUT:
2.745215183413162e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:06:37) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
x=(a**a)+(b**b)+(c**c)
y=a + b + c
print(round(x/y,7))
-- EXECUTION TIME:
0.754826
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.7452150957795578e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
digite a:  digite b:  digite c:
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
digite a:  digite b:  digite c:  1.4976614970661968e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:07:11) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
x=(a**a)+(b**b)+(c**c)
y=a + b + c
print(round(x/y,7))
-- OUTPUT:
2.7452150957795578e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:07:58) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
x=a**a+b**b+c**c
y= a+b+c
print(round(x/y,7))
-- OUTPUT:
2.7452150957795578e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:08:32) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
x=a**2+b**2+c**2
y= a+b+c
print(round(x/y,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:08:41) 
-- CODE:
a=int(input('digite a:  '))
b=int(input('digite b:  '))
c=int(input('digite c:  '))
x=a**2+b**2+c**2
y= a+b+c
print(round(x/y,7))
-- EXECUTION TIME:
0.646016
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
